projekt/k8s/my-postgres-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: my-postgres-deployment
  namespace: app
  labels:
    component: postgres
    app: myapp

spec:
  template:
    metadata:
      name: my-postgres-pod
      namespace: app
      labels:
        component: postgres
        app: myapp
    spec:
      containers:
        - name: my-postgres-container
          image: postgres:alpine
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              subPath: postgres
              name: postgresvolume
      volumes:
        - name: postgresvolume
          persistentVolumeClaim:
            claimName: my-postgres-pvc
  replicas: 1
  selector:
    matchLabels:
      component: postgres
      app: myapp
