projekt/k8s/my-backend-clusterip.yaml
apiVersion: v1
kind: Service

metadata:
  name: my-backend-service
  namespace: app
  labels:
    component: backend
    app: myapp

spec:
  type: ClusterIP
  ports:
    - port: 5000
      targetPort: 5000

  selector:
    app: myapp
    component: backend
