projekt/k8s/my-frontend-clusterip.yaml
apiVersion: v1
kind: Service

metadata:
  name: my-frontend-service
  namespace: app
  labels:
    component: frontend
    app: myapp

spec:
  type: ClusterIP
  ports:
    - port: 3000
      targetPort: 3000

  selector:
    app: myapp
    component: frontend
