projekt/k8s/my-ingress.yaml
apiVersion: networking.k8s.io/v1

kind: Ingress

metadata:
  name: my-ingress-service
  namespace: app
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1

spec:
  rules:
    - host: localhost
      http:
        paths:
          - path: /api/?(.*)
            pathType: Prefix
            backend:
              service:
                name: my-backend-service
                port:
                  number: 5000
          - path: /(.*)
            pathType: Prefix
            backend:
              service:
                name: my-frontend-service
                port:
                  number: 3000
